--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -981,7 +981,7 @@
 							<li class="soc2"><a href="#"></a></li>
 							<li class="soc3"><a href="#"></a></li>
 							<li class="soc4"><a href="#"></a></li>
-							<li class="soc5"><a href="#"></a></li>
+							<!--<li class="soc5"><a href="#"></a></li>-->
 							<li class="soc6"><a href="#"></a></li>
 							<li class="soc7"><a href="#"></a></li>
 							<li class="soc8"><a href="#"></a></li>
